--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
-  "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
-  "main": "server.js",
+  "name": "bot-tunder",
+  "version": "1.0.0",
+  "description": "TN",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "color-convert": "^2.0.1",
+    "common-tags": "^1.8.0",
+    "discord.js": "^12.2.0",
+    "express": "^4.17.1",
+    "fortnite": "^4.3.2",
+    "jimp": "^0.12.0",
+    "moment": "^2.26.0",
+    "mongoose": "^5.9.15",
+    "ms": "^2.1.2",
+    "mysql": "^2.18.1",
+    "number-to-words": "^1.2.4",
+    "request": "^2.88.2"
   },
-  "engines": {
-    "node": "12.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+  "devDependencies": {}
 }
