--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "dependencies": {
     "color-convert": "^2.0.1",
     "common-tags": "^1.8.0",
-    "discord.js": "^12.2.0",
+    "discord.js": "^11.5.1",
+    "erela.js": "^1.1.8",
     "express": "^4.17.1",
-    "fortnite": "^4.3.2",
-    "jimp": "^0.12.0",
+    "jimp": "^0.12.1",
     "moment": "^2.26.0",
-    "mongoose": "^5.9.15",
+    "mongoose": "^5.9.17",
     "ms": "^2.1.2",
     "mysql": "^2.18.1",
     "number-to-words": "^1.2.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "steam-provider": "^0.3.2"
   },
   "devDependencies": {}
 }
