🚣🎲 Checkpoint ./comandos/adv.js:15634585/55 ./package.json:15634585/2624 ./comandos/diario.js:15634585/1123

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mysql": "^2.18.1",
     "number-to-words": "^1.2.4",
     "request": "^2.88.2",
-    "steam-provider": "^0.3.2"
+    "steam-provider": "^0.3.2",
+    "quick.db": "^7.1.1",
+    "parse-ms": "^2.0.0"
   },
   "devDependencies": {}
 }
