--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "request": "^2.88.2",
     "steam-provider": "^0.3.2",
     "quick.db": "^7.1.1",
-    "parse-ms": "^2.0.0"
+    "parse-ms": "^2.0.0",
+    "ffmpeg": "^0.0.4",
+    "ytdl-core": "^3.1.1"
   },
   "devDependencies": {}
 }
