--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "quick.db": "^7.1.1",
     "parse-ms": "^2.0.0",
     "ffmpeg": "^0.0.4",
-    "ytdl-core": "^3.1.1"
+    "ytdl-core": "^3.1.1",
+    "node-opus": "^0.3.3"
   },
   "devDependencies": {}
 }
