--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "parse-ms": "^2.0.0",
     "ffmpeg": "^0.0.4",
     "ytdl-core": "^3.1.1",
-    "node-opus": "^0.3.3"
+    "node-opus": "^0.3.3",
+    "yt-search": "^1.1.2"
   },
   "devDependencies": {}
 }
