--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "ffmpeg": "^0.0.4",
     "ytdl-core": "^3.1.1",
     "node-opus": "^0.3.3",
-    "yt-search": "^1.1.2"
+    "yt-search": "^1.1.2",
+    "opusscript": "^0.0.7",
+    "ffmpeg-binaries": "^4.0.0"
   },
   "devDependencies": {}
 }
