🕹👔 Checkpoint ./config.json:15634585/118

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "NzE3NTM0ODk0OTUwOTczNDcw.Xte3_Q.jfRRCq3TsVmuobkWNHAgtBegFa0",
+    "token": "NzIwODY2ODU1NDUwOTY4MDk0.XuMNpQ.41KPgoDsEtTLM7oRttmcdl0wmdg",
     "prefix": "."
 }
