🐺😼 Checkpoint ./index.js:15634585/62 ./config.json:15634585/118 ./comandos/painel.js:15634585/1530 ./comandos/onff.js:15634585/204

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token": "NzIwODY2ODU1NDUwOTY4MDk0.XuMNpQ.41KPgoDsEtTLM7oRttmcdl0wmdg",
+    "token": "NzIwODY2ODU1NDUwOTY4MDk0.XuPpnw.Mjtp9AK9vAOaavcQl88R5CJkXZY",
     "prefix": "."
 }
